force-app/main/default/objects/Units_Hold_For_SM__c/Units_Hold_For_SM__c.object-meta.xml
<CustomObject>
    <label>Units Hold Request Form</label>
    <nameField>
        <displayFormat>HU-{0000}</displayFormat>
        <label>Units Hold For SM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Hold Request Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>