force-app/main/default/objects/Units_Hold_For_SM__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <defaultValue>&apos;Yet to Submit&apos;</defaultValue>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Yet to Submit</fullName>
            </value>
            <value>
                <fullName>Approved by SO Head</fullName>
            </value>
            <value>
                <fullName>Rejected by SO Head</fullName>
            </value>
            <value>
                <fullName>Pending for CP Head Approval</fullName>
            </value>
            <value>
                <fullName>Rejected by CP Head</fullName>
            </value>
            <value>
                <fullName>Approved by CP Head</fullName>
                <label>Approved by Accounts Team</label>
            </value>
            <value>
                <fullName>Pending for Accounts Team Approval</fullName>
            </value>
            <value>
                <fullName>Rejected By Accounts Team</fullName>
            </value>
            <value>
                <fullName>Approved by Sales Head</fullName>
            </value>
            <value>
                <fullName>Rejected by Sales Head</fullName>
            </value>
            <value>
                <fullName>Approved by Sales VP</fullName>
            </value>
            <value>
                <fullName>Rejected by Sales VP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>