force-app/main/default/objects/Units_Hold_For_SM__c/fields/cashFileName__c.field-meta.xml
<CustomField>
    <fullName>cashFileName__c</fullName>
    <label>cashFileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>