force-app/main/default/objects/Units_Hold_For_SM__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipLabel>Unit Holds For SM</relationshipLabel>
    <relationshipName>Unit_Holds_For_SM</relationshipName>
    <type>Lookup</type>
</CustomField>