force-app/main/default/objects/Units_Hold_For_SM__c/fields/chequeCopyFileName__c.field-meta.xml
<CustomField>
    <fullName>chequeCopyFileName__c</fullName>
    <label>chequeCopyFileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>