force-app/main/default/objects/Units_Hold_For_SM__c/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <label>Created Time With Seconds</label>
    <length>200</length>
    <type>Text</type>
</CustomField>