force-app/main/default/objects/Units_Hold_For_SM__c/fields/creditCardFileName__c.field-meta.xml
<CustomField>
    <fullName>creditCardFileName__c</fullName>
    <label>creditCardFileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>