force-app/main/default/objects/Units_Hold_For_SM__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>Index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>