force-app/main/default/objects/Units_Hold_For_SM__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Via SOBHA Website</fullName>
            </value>
            <value>
                <fullName>CreditCard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>