force-app/main/default/objects/Units_Hold_For_SM__c/fields/Percent_Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Percent_Amount_Collected__c</fullName>
    <label>% Amount Collected</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>