force-app/main/default/objects/Units_Hold_For_SM__c/fields/Quotation__c.field-meta.xml
<CustomField>
    <fullName>Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Quotation__c.Unit__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quotation__c</referenceTo>
    <relationshipName>Unit_Holds_For_SM</relationshipName>
    <type>Lookup</type>
</CustomField>