force-app/main/default/objects/Units_Hold_For_SM__c/fields/Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Sale_Value__c</fullName>
    <label>Sale Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>