force-app/main/default/objects/Units_Hold_For_SM__c/fields/SC_ID__c.field-meta.xml
<CustomField>
    <fullName>SC_ID__c</fullName>
    <label>SC ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>