force-app/main/default/objects/Units_Hold_For_SM__c/fields/sobhaWebisteFileName__c.field-meta.xml
<CustomField>
    <fullName>sobhaWebisteFileName__c</fullName>
    <label>sobhaWebisteFileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>