force-app/main/default/objects/Units_Hold_For_SM__c/fields/Source_of_the_deal__c.field-meta.xml
<CustomField>
    <fullName>Source_of_the_deal__c</fullName>
    <label>Source of the deal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Sobha Connect</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>