force-app/main/default/objects/Units_Hold_For_SM__c/fields/wireTransferFileName__c.field-meta.xml
<CustomField>
    <fullName>wireTransferFileName__c</fullName>
    <label>wireTransferFileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>